# cache

./: .env.example  LICENSE  README.md  build.sh  composer.json
rust/: Cargo.toml  build.sh
rust/src/: lib.rs
src/: CacheManager.php  CacheServiceProvider.php  ServiceProvider.php
src/Cluster/: RedisClusterConfiguration.php
src/Configuration/: Configuration.php
src/ConnectionPool/: ClusterAwareRedisConnectionPool.php  RedisConnectionPool.php
src/Contracts/: CacheEngineInterface.php  CacheInterface.php  CacheProviderInterface.php  CacheStoreInterface.php  ClusterConfigurationInterface.php  ConfigurationInterface.php  ConnectionPoolInterface.php  EngineManagerInterface.php  SerializerInterface.php  SessionStoreInterface.php
src/Engines/: AMPHPEngine.php  EngineManager.php  PurePHPEngine.php  RustFFIEngine.php
src/Exceptions/: CacheException.php  ConfigurationException.php  ConnectionException.php  EngineException.php  EngineNotAvailableException.php  InvalidArgumentException.php  NoEngineAvailableException.php
src/FFI/: RustCacheFFI.php
src/Middleware/: CacheMiddleware.php
src/Providers/: AWSElastiCacheProvider.php  DragonflyProvider.php  ValkeyProvider.php
src/Serializers/: JsonSerializer.php  PhpSerializer.php  SerializerManager.php
src/Session/: SessionHandler.php  SessionStore.php
src/Stores/: FileStore.php  MemoryStore.php
tests/Integration/: SessionIntegrationTest.php
tests/Unit/: SessionHandlerTest.php
