[package]
name = "highper-cache"
version = "1.0.0"
edition = "2021"
description = "High-performance cache library with FFI bindings"
authors = ["HighPerApp Team <raghuveer.dendukuri@gmail.com>"]

[lib]
name = "highper_cache"
crate-type = ["cdylib"]

[dependencies]
redis = { version = "0.24", features = ["async-std-comp"] }
memcached = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
tokio = { version = "1.0", features = ["full"] }
async-std = "1.12"
lz4_flex = "0.11"
zstd = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1